// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI reducer store state [Statistics UI] update ui state should not add new property to the store 1`] = `
Object {
  "chartsView": Object {
    "selectedChart": "transactions-per-second",
    "selectedChartTimeSpan": "30days",
  },
}
`;

exports[`UI reducer store state [Statistics UI] update ui state should partial update state for provided key 1`] = `
Object {
  "chartsView": Object {
    "selectedChart": "test",
    "selectedChartTimeSpan": "30days",
  },
}
`;

exports[`UI reducer store state [Statistics UI] update ui state should partial update state for provided key 2`] = `
Object {
  "chartsView": Object {
    "selectedChart": "test",
    "selectedChartTimeSpan": "20days",
  },
}
`;

exports[`UI reducer store state undefiend action should return default state 1`] = `
Object {
  "chartsView": Object {
    "selectedChart": "transactions-per-second",
    "selectedChartTimeSpan": "30days",
  },
}
`;
